# cataloger

./: .dockerignore  .env.server.example  .gitignore  BOOTSTRAP.md  CLI_REFERENCE.md  DATABASE_SETUP.md  DEVELOPMENT.md  Dockerfile.agent  Dockerfile.server  FEEDBACK_LOOP.md  FINAL_STATUS.md  FRONTEND.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GAPS.md  LOCAL_DEVELOPMENT.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SMOKE_TEST.md  docker-compose.dev.yaml  pyproject.toml
claude_guidelines/: dbos.mdc
data/: sample_ecommerce.duckdb  sample_timeseries.duckdb
prompts/: cataloging_agent.yaml  summary_agent.yaml
python_bootstrap_scripts/: README.md  create_sample_db.py  create_timeseries_db.py
scripts/: README.md  bootstrap-db.sh  build-agent.sh  build-container.sh  catalog-ecommerce.sh  catalog-timeseries.sh  run-server.sh  run-smoke-test.sh  setup-env.sh  setup-env.sh.bak  smoke_test.py  start-dev-services.sh  stop-dev-services.sh
server/: main.py
server/static/: style.css
server/templates/: base.html  catalog_content_fragment.html  catalog_list_fragment.html  comments.html  current.html  error.html  index.html  recent_catalogs_fragment.html  timelapse.html
src/: .env.example
src/cataloger/: cli.py  context.py
src/cataloger/agent/: loop.py  tools.py
src/cataloger/container/: pool.py  runtime.py
src/cataloger/storage/: s3.py
src/cataloger/workflow/: catalog.py
tests/: test_agent_tools.py  test_container_runtime.py  test_feedback_loop.py  test_s3_storage.py
